# AI-Employee-Silver-Tier-

./: .env.example  Business_Goals.md  CLAUDE.md  Company_Handbook.md  Dashboard.md  README.md  orchestrator.py  pyproject.toml
.claude/: settings.local.json
.claude/skills/approval-handler/: SKILL.md
.claude/skills/email-actions/: SKILL.md
.claude/skills/gmail-setup/: SKILL.md
.claude/skills/linkedin-posting/: SKILL.md
.claude/skills/scheduling/: SKILL.md
.claude/skills/task-planner/: SKILL.md
Approved/: APPROVAL_email_sara_khan_20260226_213000.md
Drafts/: DRAFT_email_sara_khan_reply_20260226_213000.md
Inbox/: EMAIL_sara_khan_ai_automation_inquiry_20260226_090000.md
Needs_Action/: FILE_EMAIL_sara_khan_ai_automation_inquiry_20260226_090000_20260226_210804.md
Plans/: PLAN_sara_khan_inquiry_response_20260226_213000.md
docs/: cron-setup.md
mcp_servers/: email_server.py
scripts/: linkedin_poster.py  scheduler.sh  setup_gmail_mcp.sh
watchers/: filesystem_watcher.py  gmail_watcher.py
